@@ -32,6 +32,7 @@ Version 1.3.12+svn:
   * Miscellaneous and bug fixes
     * Replaced the 'Binary Saves' option with 'Compressed Saves' and now
       writes gzip files.
+    * Undoing recruits are no longer allowed.
 
 Version 1.3.12:
   * campaigns
